--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,10 @@
 {
-    "presets": ["@babel/preset-env"],
+    "presets": [
+	["@babel/preset-env", {
+        	"useBuiltIns": "entry",
+		"corejs": 3
+        }]
+    ],
     "plugins": [
         [
         "transform-react-jsx"
