--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "core-js": "^3.6.5",
     "date-fns": "^2.14.0",
     "react": "^16.8.4",
+    "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.8.4",
     "react-render-html": "^0.6.0",
     "styled-components": "^5.0.1"
