--- a/package.json
+++ b/package.json
@@ -80,5 +80,15 @@
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
     ]
+  },
+  "browserslist": {
+    "production": [
+      "> 1%",
+      "ie 10"
+    ],
+    "modern": [
+      "last 1 chrome version",
+      "last 1 firefox version"
+    ]
   }
 }
