--- a/package.json
+++ b/package.json
@@ -27,20 +27,22 @@
     "babel-plugin-transform-react-jsx": "6.24.1",
     "classnames": "^2.2.6",
     "clsx": "^1.1.0",
-    "core-js": "^3.6.5",
     "date-fns": "^2.14.0",
+    "es6-promise": "^4.2.8",
     "eslint": "^7.2.0",
     "eslint-plugin-compat": "^3.7.0",
     "react": "^16.8.4",
-    "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.8.4",
     "react-render-html": "^0.6.0",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.10.1",
+    "@babel/runtime-corejs3": "^7.10.2",
     "babel-jest": "^25.3.0",
     "clean-webpack-plugin": "^3.0.0",
+    "core-js": "^3.6.5",
     "css-loader": "^3.4.2",
     "dotenv": "^8.2.0",
     "enzyme": "^3.11.0",
@@ -79,16 +81,6 @@
   "jest": {
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      "> 1%",
-      "ie 10"
-    ],
-    "modern": [
-      "last 1 chrome version",
-      "last 1 firefox version"
     ]
   }
 }
